fin de la seccion 4

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,23 +1,27 @@
 
     <div class="ae-grid au-xs-ta-center au-mb-4">
-      <div class="ae-grid__item item-lg-4 ae-kappa au-mb-3">
+
+      <div class="animated fadeIn ae-grid__item item-lg-4 ae-kappa au-mb-3">
         <img src="https://www.geekmi.news/__export/1623026738978/sites/debate/img/2021/06/06/erencio7_crop1623026695740.jpg_1644336768.jpg" alt="" class="au-mb-3">
         <h5 class="ae-u-bolder au-mt-2">Eren Jaeger</h5>
         <p class="ae-u-bolder au-mb-3">Titan de ataque</p>
         <p class="au-lg-ta-left au-mb-3 au-pl-4 au-pr-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p><a href="#0" class="ae-u-bolder au-underline">@erenjaeger</a>
       </div>
-      <div class="ae-grid__item item-lg-4 ae-kappa au-mb-3">
+
+      <div class="animated fadeIn ae-grid__item item-lg-4 ae-kappa au-mb-3">
         <img src="https://sanaatangroup.com/assets/img/team/team-2.jpg" alt="" class="au-mb-3">
         <h5 class="ae-u-bolder au-mt-2">Angelina</h5>
         <p class="ae-u-bolder au-mb-3"></p>
         <p class="au-lg-ta-left au-mb-3 au-pl-4 au-pr-4">Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p><a href="#0" class="ae-u-bolder au-underline">@angelinawidow</a>
       </div>
-      <div class="ae-grid__item item-lg-4 ae-kappa au-mb-3">
+
+      <div class="animated fadeIn ae-grid__item item-lg-4 ae-kappa au-mb-3">
         <img src="https://sanaatangroup.com/assets/img/team/team-1.jpg" alt="" class="au-mb-3">
         <h5 class="ae-u-bolder au-mt-2">Patrick Anderson</h5>
         <p class="ae-u-bolder au-mb-3">Art Director</p>
         <p class="au-lg-ta-left au-mb-3 au-pl-4 au-pr-4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><a href="#0" class="ae-u-bolder au-underline">@patrickanderson</a>
       </div>
+      
     </div>
     <div class="ae-grid au-pt-2">
       <div class="ae-grid__item item-lg-8 item-lg--offset-2">
